Removed important text comment to avoid distorting other imported code

--- a/static/css/styles-imported.css
+++ b/static/css/styles-imported.css
@@ -208,7 +208,7 @@ sup {
 }
 
 a {
-  color: #444444 !important;
+  color: #444444;
   text-decoration: none;
 }
 a:hover {
